one last look at this, because Plut is coming

--- a/tobias/mempool/playingWithJuliaPlots.ipynb
+++ b/tobias/mempool/playingWithJuliaPlots.ipynb
@@ -83,6 +83,24 @@
           }
         }
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
     }
   ],
   "metadata": {
