Fix display issues of hypernova

--- a/alberto/HyperNova by Hand.ipynb
+++ b/alberto/HyperNova by Hand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16fa92c0",
+   "id": "22333e17",
    "metadata": {},
    "source": [
     "# Part 2: Folding CCS relations in HyperNova"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "785be1a3",
+   "id": "dd246104",
    "metadata": {},
    "source": [
     "In part 1, we managed to verify the validity of a CCS relation using the sum-check. The goal was to get ourselves familiar with the mechanics of the protocol. In particular, we saw that two sum-checks are run for such a CCS relation, and how the two sum-checks relate.\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d98d92",
+   "id": "053776e4",
    "metadata": {},
    "source": [
     "## Linearised Committed CCS (LCCCS)\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a503a27",
+   "id": "053245d7",
    "metadata": {},
    "source": [
     "In HyperNova, CCS relations are modified for folding:\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f23baa",
+   "id": "5f12602b",
    "metadata": {},
    "source": [
     "## Multi-folding for CCS construction\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20e888b",
+   "id": "033b1d54",
    "metadata": {},
    "source": [
     "## Folding Fibonacci\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26f7c779",
+   "id": "38b2f0a0",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3614dea5",
+   "id": "d7a3fd0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b66318",
+   "id": "557cd14f",
    "metadata": {},
    "source": [
     "Recall also that the multilinear extensions $\\widetilde{M_i}$ of $M_i$ and $\\widetilde{z}$ of $z$ are defined as \n",
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "161e2fa9",
+   "id": "5a59f0f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb3e68e",
+   "id": "df6d44a6",
    "metadata": {},
    "source": [
     "## Iteration 1 (base case)\n",
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8c2c8e8",
+   "id": "c7c2d329",
    "metadata": {},
    "source": [
     "Checking that \n",
@@ -1479,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "3b564786",
+   "id": "54bad720",
    "metadata": {},
    "outputs": [
     {
@@ -1572,12 +1572,12 @@
    "id": "e9059704",
    "metadata": {},
    "source": [
-    "## Decider"
+    "## IVC Verifier"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d99b652",
+   "id": "9e4c0c95",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e94a0fb8",
+   "id": "89420201",
    "metadata": {},
    "source": [
     "We are left with a linearised CCCS relation $R'_3$. Since our goal was only to compute two iterations, we can finally compute the sum-check on this instance. Had we wanted to run more iterations, we would accumulate these sum-checks further."
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529f243b",
+   "id": "31cfde65",
    "metadata": {},
    "source": [
     "### Batching sum-checks from $R'_3 \\in \\mathcal{R}_{LCCCS}$\n",
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "18f56e3d",
+   "id": "31eeaa77",
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "1670337a",
+   "id": "3fc9c169",
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56467d9f",
+   "id": "bcc5f348",
    "metadata": {},
    "source": [
     "#### Round 1\n",
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "06169d2f",
+   "id": "6bfa0f0f",
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a8f8bf",
+   "id": "ccaf20c6",
    "metadata": {},
    "source": [
     "Verifier checks that $q_1(0) + q_1(1) = v'$"
@@ -1748,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "98e507f9",
+   "id": "09d1a320",
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff4c9f10",
+   "id": "356c7ebb",
    "metadata": {},
    "source": [
     "Verifier computes a random element $r''_1$ to check that $q_1$ is actually $v'$"
@@ -1777,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "92a3fa6e",
+   "id": "d41d78e3",
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0cbd93d",
+   "id": "f29a2050",
    "metadata": {},
    "source": [
     "#### Round 2\n",
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "f04fce88",
+   "id": "cec168a2",
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf0838b8",
+   "id": "1eb59e7b",
    "metadata": {},
    "source": [
     "Verifier checks that $q_2(0) + q_2(1) = q_1(r''_1)$"
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "2c01bbea",
+   "id": "580e0b86",
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe0edb3",
+   "id": "013839c3",
    "metadata": {},
    "source": [
     "Verifier computes a random element $r''_2$ to check that $q_2$ is actually $v'_{12}$"
@@ -1882,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "2c43a1ee",
+   "id": "ef6359ab",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed20a50",
+   "id": "3f4f64ae",
    "metadata": {},
    "source": [
     "#### Round 3\n",
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "1e7e396e",
+   "id": "7c5aced2",
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da853a88",
+   "id": "0199b0da",
    "metadata": {},
    "source": [
     "Verifier checks that $q_3(0) + q_3(1) = q_2(r''_2)$"
@@ -1949,7 +1949,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "712dc15a",
+   "id": "06eb8a2a",
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc65cd3",
+   "id": "8ca73348",
    "metadata": {},
    "source": [
     "Verifier computes a random element $r''_3$ to check that $q_3$ is actually $v'_{13}$"
@@ -1978,7 +1978,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "00d474a3",
+   "id": "92a519c6",
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35aeb316",
+   "id": "455cea3d",
    "metadata": {},
    "source": [
     "The verifier can compute now on his own\n",
@@ -2017,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "b5b6dda2",
+   "id": "58eabc72",
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35a5160",
+   "id": "ffa7b725",
    "metadata": {},
    "source": [
     "More precisely, checking \n",
@@ -2156,14 +2156,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa30311",
+   "id": "d35331c5",
    "metadata": {},
    "source": [
-    "## Final thoughts\n",
+    "## Summary\n",
     "\n",
     "Great! We have managed to fold two iterations of our Fibonacci example and then verify the folding protocol by sum-checking the final linearised CCCS relation $R'_3$.\n",
     "\n",
-    "At each iteration, the incoming relation $R^{(k)}_2 \\in \\mathcal{R}_{CCCS}$ generates random values $r^{(k)} \\in \\mathbb{F}$ that are propagated to the next accumulated relation $R^{(k+1)}_1 \\in \\mathcal{R}_{LCCCS}$. This serves as the glue that unlocks the domino effect.\n",
+    "At each iteration, the incoming relation $R^{(k)}_2 \\in \\mathcal{R}_{CCCS}$ generates random values $r^{(k)} \\in \\mathbb{F}$ that are propagated to the next accumulated relation $R^{(k+1)}_1 \\in \\mathcal{R}_{LCCCS}$. This serves as the glue that makes the domino effect possible.\n",
     "\n",
     "We batched many of the sum-checks into a single sum-check using a random linear combination of the sums, thus avoiding unnecessary computation when needed.\n",
     "\n",
