--- a/alberto/SuperSpartan by Hand.ipynb
+++ b/alberto/SuperSpartan by Hand.ipynb
@@ -8,7 +8,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "    <b>Acknowledgements</b>\n",
     "    \n",
-    "I'd like to thank Nicolas Mohnblatt for brainstorming, discussing and reviewing this article, and for his many shared insights. I'm also thankful to Jamie Gabbay and Apriori for their generous feedback.\n",
+    "I'd like to thank Nicolas Mohnblatt for brainstorming, discussing and reviewing this article, and for his many shared insights. I'm also thankful to Srinath Setty, Jamie Gabbay and Apriori for their generous feedback.\n",
     "    \n",
     "This article wouldn't have been possible without them. All mistakes are my own.\n",
     "</div>"
@@ -19,13 +19,13 @@
    "id": "f7360ca6",
    "metadata": {},
    "source": [
-    "# Part 1: Sum-check for [CCS](https://eprint.iacr.org/2023/552.pdf) relations\n",
+    "# Part 1: SuperSpartan by Hand\n",
     "\n",
     "The [sum-check protocol](https://dl.acm.org/doi/pdf/10.1145/146585.146605) is like one of those magic tricks that, despite having been exposed to how it works, it still makes your mind do some acrobatics every time you see it applied.\n",
     "\n",
     "Any polynomial equation can be transformed into an instance of the sum-check, making this amazing algorithm surprisingly applicable. \n",
     "\n",
-    "Since the sum-check lies at the core of the [HyperNova](https://eprint.iacr.org/2023/573.pdf)'s folding techniques, we will dive first into its details on a simpler case: the checking of a [Customisable Constraint System (CCS)](https://eprint.iacr.org/2023/552.pdf) instance."
+    "Since the sum-check lies at the core of the [HyperNova](https://eprint.iacr.org/2023/573.pdf)'s folding techniques, we will dive first into its details on a simpler case: the checking of a [Customisable Constraint System (CCS)](https://eprint.iacr.org/2023/552.pdf) instance using the SuperSpartan’s polynomial IOP as described in their paper."
    ]
   },
   {
