Add link to jupyter notebooks

--- a/alberto/SuperSpartan by Hand.ipynb
+++ b/alberto/SuperSpartan by Hand.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5dbc5972",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    <b>Acknowledgements</b>\n",
-    "    \n",
-    "I'd like to thank Nicolas Mohnblatt for brainstorming, discussing and reviewing this article, and for his many shared insights. I'm also thankful to Srinath Setty, Jamie Gabbay and Apriori for their generous feedback.\n",
-    "    \n",
-    "This article wouldn't have been possible without them. All mistakes are my own.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f7360ca6",
    "metadata": {},
    "source": [
-    "# Part 1: SuperSpartan by Hand\n",
+    "# SuperSpartan by Hand\n",
     "\n",
     "The [sum-check protocol](https://dl.acm.org/doi/pdf/10.1145/146585.146605) is like one of those magic tricks that, despite having been exposed to how it works, it still makes your mind do some acrobatics every time you see it applied.\n",
     "\n",
@@ -90,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "bf60a5c9",
    "metadata": {},
    "outputs": [],
@@ -103,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "81d590c2",
    "metadata": {
     "scrolled": true
@@ -115,7 +101,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "4d91f686",
    "metadata": {},
    "outputs": [
@@ -294,7 +280,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "8c37d2bc",
    "metadata": {},
    "outputs": [
@@ -342,7 +328,7 @@
        "(4, 8)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "ac5e459c",
    "metadata": {},
    "outputs": [
@@ -443,7 +429,7 @@
        "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "a9a13987",
    "metadata": {},
    "outputs": [
@@ -481,7 +467,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "0297c1e4",
    "metadata": {},
    "outputs": [],
@@ -545,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "5cab0714",
    "metadata": {},
    "outputs": [
@@ -555,7 +541,7 @@
        "21*x11^2*x22^2 - 17*x11^2*x22 - 15*x11*x22^2 + 2*x11^2 + 11*x11*x22 - 2*x11"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "defe206b",
    "metadata": {},
    "outputs": [
@@ -610,7 +596,7 @@
        "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,17 +652,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "027b679f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(57, 23)"
+       "(9, 61)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "65c8efc9",
    "metadata": {
     "scrolled": false
@@ -717,10 +703,10 @@
     {
      "data": {
       "text/plain": [
-       "28*x11^3*x22^3 + 22*x11^3*x22^2 - 16*x11^2*x22^3 + 13*x11^3*x22 + 34*x11^2*x22^2 + 26*x11*x22^3 - 23*x11^3 + 29*x11^2*x22 - 43*x11*x22^2 - 38*x11^2 + 8*x11*x22 - 40*x11"
+       "-31*x11^3*x22^3 - 31*x11^3*x22^2 + 24*x11^2*x22^3 + 42*x11^3*x22 + 25*x11^2*x22^2 - 24*x11*x22^3 - 20*x11^3 + 22*x11^2*x22 + 29*x11*x22^2 - 30*x11^2 + 45*x11*x22 + 50*x11"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "e7b8efff",
    "metadata": {},
    "outputs": [
@@ -776,7 +762,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,17 +785,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "d0c08db0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17*x11^3 - 29*x11^2 + 12*x11"
+       "41*x11^3 + 11*x11^2 + 49*x11"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "830bd27d",
    "metadata": {},
    "outputs": [
@@ -841,7 +827,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,17 +846,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "5beb1beb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "84"
+       "48"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,17 +886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "edef332f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-18*x22^3 + 37*x22^2 + 27*x22 - 20"
+       "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "feb18900",
    "metadata": {},
    "outputs": [
@@ -942,7 +928,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,17 +947,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "55145a98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31"
+       "23"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,17 +1005,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "12b87212",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(33, -10, 10)"
+       "(17, 11, 29)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,17 +1054,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "157c4cde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "78"
+       "57"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,17 +1076,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "d61a12ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2"
+       "26"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,17 +1122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "b551fc08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2*y11^2 + 16*y11 - 8"
+       "16*y11^2 - 44*y11 + 27"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "8c736d08",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1170,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,17 +1189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "7fc347cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23"
+       "25"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,17 +1243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "53317b29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27*y22^2 + 9*y22 + 37"
+       "-37*y22^2 + 2*y22 + 37"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "3ce9a9a8",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1289,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,17 +1308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "1fa4ee35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "96"
+       "50"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,17 +1354,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "2b1c2ec7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-45*y33^2 - 33*y33 + 19"
+       "17*y33^2 + 20*y33 - 43"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "63e59286",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1397,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,17 +1416,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "cceb9c68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "84"
+       "49"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "d50cf0af",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1456,7 @@
        "True"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "74226d7e",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1523,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
